<resources>
    <string name="app_name">FinalProject</string>
    <string name="weather">Weather</string>
    <string name="city_info">Enter your city</string>
    <string name="confirm_btn">Confirm</string>
    <string name="no_user_input">No city name entered</string>
    <string name="title">Travide</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tips_">Tips. Info</string>
    <string name="putting_up_a_tent">Putting up a tent</string>
    <string name="using_a_map">Using a map</string>
    <string name="equipment">Equipment</string>
    <string name="tents">Tents</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="bonfire">Bonfire</string>
    <string name="tips">Tips</string>
    <string name="button">Button</string>
    <string name="tent">Tent</string>
    <string name="scrollview_tips_text">Press buttons to show the info</string>
    <string name="content_description">contentDescription</string>
    <string name="food">Food</string>
    <string name="textview">TextView</string>
    <string name="map_">map</string>
    <string name="compass_activity">COMPASS ACTIVITY</string>
    <string name="game">game</string>
    <string name="text_view_tips">Press the buttons for info</string>
    <string name="common_info">common info</string>
    <string name="temperature">Temperature</string>
    <string name="border_temp">Min-Max Temp</string>
    <string name="humidity">Humidity</string>
    <string name="description">Description</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="start">Start</string>
    <string name="flashlight">Flashlight</string>
    <string name="compass">compass</string>
    <string name="covid_res_text">Covid Info will appear here</string>
    <string name="confirm">Confirm</string>
    <string name="get_info">get info</string>
    <string name="country">Country</string>
    <string name="covid_info">Covid Info</string>
    <string name="tipsadvices">TipsAdvices</string>
    <string name="compass_">Compass</string>
    <string name="tips_and_advices"><![CDATA[Tips&Advices]]></string>
    <string name="compass__">Compass</string>
</resources>