<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".TipsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/tips_for_adventurers"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/advice" />



    <Button
        android:id="@+id/button_equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/equipment"
        app:layout_constraintEnd_toStartOf="@+id/map_using"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/map_using"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/using_a_map"
        app:layout_constraintEnd_toStartOf="@+id/tents"
        app:layout_constraintStart_toEndOf="@+id/button_equipment"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/tents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/tents"
        app:layout_constraintBaseline_toBaselineOf="@+id/map_using"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map_using" />

    <Button
        android:id="@+id/mushrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/mushrooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_equipment" />

    <Button
        android:id="@+id/bonfire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/bonfire"
        app:layout_constraintStart_toStartOf="@+id/map_using"
        app:layout_constraintTop_toBottomOf="@+id/map_using" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="@+id/tents"
        app:layout_constraintTop_toBottomOf="@+id/tents" />

    <TextView
        android:id="@+id/tipsView"
        android:layout_width="405dp"
        android:layout_height="394dp"
        android:text="@string/tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>