<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/weather"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="75dp"
        android:height="48dp"
        android:backgroundTint="#5B58AC"
        android:ems="10"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/city_info"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginHorizontal="150sp"
        android:layout_marginTop="20dp"
        android:width="150dp"
        android:background="#A85555"
        android:backgroundTint="#7C7B8C"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_cb"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happy_monkey"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn"
        tools:ignore="MissingConstraints" />


    <!--- Current Temperature -->
    <CheckBox
        android:id="@+id/current_temperature_cb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:width="122dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:onClick="onCheckboxClicked"
        android:text="@string/temperature"
        app:layout_constraintEnd_toStartOf="@+id/border_temperature_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border_temperature_cb"
        tools:ignore="UsingOnClickInXml" />


    <!--- Borders of Temperature -->
    <CheckBox
        android:id="@+id/border_temperature_cb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:width="122dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:onClick="onCheckboxClicked"
        android:text="@string/border_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_field"
        tools:ignore="UsingOnClickInXml" />

    <!--- Humidity -->
    <CheckBox
        android:id="@+id/humidity_cb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginRight="5dp"
        android:width="122dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:onClick="onCheckboxClicked"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/border_temperature_cb"
        app:layout_constraintTop_toTopOf="@+id/border_temperature_cb"
        tools:ignore="UsingOnClickInXml" />


    <!--- Wind Speed -->
    <CheckBox
        android:id="@+id/wind_speed_cb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginRight="60dp"
        android:width="122dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:onClick="onCheckboxClicked"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/humidity_cb"
        app:layout_constraintTop_toTopOf="@+id/pressure_cb"
        tools:ignore="UsingOnClickInXml" />

    <!-- Pressure -->
    <CheckBox
        android:id="@+id/pressure_cb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:width="122dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:onClick="onCheckboxClicked"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/current_temperature_cb"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature_cb"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>