<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23774C"
    tools:context=".EnterActivity"

    >

    <TextView
        android:id="@+id/TravelGuide"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#B89E9E"
        android:fontFamily="@font/happy_monkey"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="102dp"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TravelGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hiking" />

    <!-- Go to weather -->
    <Button
        android:id="@+id/to_weather_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/weather"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TravelGuide" />

    <!-- Go to retrofit -->
    <Button
        android:id="@+id/to_covid_info"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/covid_info"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TravelGuide" />

    <!-- Go to tips -->
    <Button
        android:id="@+id/to_tips_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/tips"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_weather_btn" />

    <!-- Go to flashlight -->
    <Button
        android:id="@+id/to_flashlight_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/flashlight"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_tips_btn" />

    <!-- Go to maps -->
    <Button
        android:id="@+id/to_maps_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/map_"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_flashlight_btn" />

    <!-- Button to compass -->
    <Button
        android:id="@+id/to_compass_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#825A5A5A"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/compass"
        android:textColor="#D1BBBB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_maps_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>